manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-challenge
  labels:
    app: kubernetes-challenge
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-challenge
  template:
    metadata:
      labels:
        app: kubernetes-challenge
    spec:
      containers:
      - name: kubernetes-challenge
        image: gcr.io/evan-sada-training/kubernetes-challenge:1.1
